kubernetes/db.yml
kind: Service
apiVersion: v1
metadata:
  name: dbservice
spec:
  selector:
    app: dbapp
  type: NodePort
  ports:
  - port: 3306
    targetPort: mysql
---
kind: Pod
apiVersion: v1
metadata:
  name: dbapp
  labels:
    app: dbapp
spec:
  containers:
  - name: mysql-db
    image: mysql
    ports:
    - name: mysql:5.7
      containerPort: 3306
    volumeMounts:
      - mountPath: /docker-entrypoint-initdb.d
        name: mysql-initdb
  volumes:
    - name: mysql-initdb
      persistentVolumeClaim:
        claimName: db-init-pv-claim
