kubernetes/kubernetes.yml
kind: Service
apiVersion: v1
metadata:
  name: httpservice
spec:
  selector:
    app: helloapp
  type: NodePort
  ports:
  - port: 8088
    targetPort: http
---
kind: Pod
apiVersion: v1
metadata:
  name: helloapp
  labels:
    app: helloapp
spec:
  containers:
  - name: sbhello
    image: szatmarizoltanmit/helloworld:latest
    ports:
    - name: http
      containerPort: 8088
