kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: ingress-pod
spec:
 rules:
   - http:
       paths:
         - path: /
           backend:
             serviceName: helloservice
             servicePort: 8088
